--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormVisita.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormVisita.fxml
@@ -32,7 +32,7 @@
                <HBox.margin>
                   <Insets />
                </HBox.margin></Label>
-             <ChoiceBox prefHeight="25.0" prefWidth="135.0">
+             <ChoiceBox fx:id="statusBox" prefHeight="25.0" prefWidth="135.0">
                  <items>
                  <FXCollections fx:factory="observableArrayList">
                      <String fx:value="AGENDADA" />
