--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/ClientesView.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/ClientesView.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane fx:id="root" stylesheets="@/css/clienteStyle.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClientesController">
+<BorderPane fx:id="root" stylesheets="@/css/clienteStyle.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClientesController">
    <top>
-        <VBox spacing="20.0" BorderPane.alignment="CENTER">
+        <VBox prefHeight="645.0" prefWidth="840.0" spacing="20.0" BorderPane.alignment="CENTER">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
@@ -46,7 +46,7 @@
             </HBox>
 
             <!-- Tabela de Clientes-->
-            <TableView fx:id="tabelaClientes" prefHeight="400" prefWidth="800.0">
+            <TableView fx:id="tabelaClientes" prefHeight="521.0" prefWidth="800.0">
                 <columns>
                <TableColumn fx:id="colunaId" prefWidth="60.0" text="id" />
                     <TableColumn fx:id="colunaNome" prefWidth="200" text="Nome" />
